--- a/medical_fe/package.json
+++ b/medical_fe/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "axios": "^1.13.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5"
   }
