--- a/medical_fe/package.json
+++ b/medical_fe/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.3.4",
     "axios": "^1.13.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "recharts": "^3.5.0"
   }
 }
