--- a/medical_fe/package.json
+++ b/medical_fe/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.13.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.5.0"
   }
 }
