add code user, đăng kí, đăng nhập, quên mật khẩu, đătk lịch khám

--- a/medical_management_BE/src/main/resources/application.properties
+++ b/medical_management_BE/src/main/resources/application.properties
@@ -24,3 +24,11 @@ spring.mvc.locale-resolver=fixed
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tvtoiit@gmail.com
+spring.mail.password=jbxywqyoxvdflvex
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
