--- a/medical_fe/package.json
+++ b/medical_fe/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "axios": "^1.13.2",
+    "react-hook-form": "^7.66.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.5.0"
+    "recharts": "^3.5.0",
+    "yup": "^1.7.1"
   }
 }
