--- a/medical_fe/package.json
+++ b/medical_fe/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.0",
+    "swiper": "^12.0.3",
     "yup": "^1.7.1"
   }
 }
